リファクタリング: CSS注入方式をContent Scriptsへ移行
- Service Worker経由のJS注入から、manifest.jsonのcontent_scriptsによる静的注入に変更
- style.jsを削除し、style.cssへ移行
- run_at: document_startの指定により、読み込み時の表示のチラつきを解消
- 動的に追加される要素へのCSS適用をブラウザ標準機能で最適化

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,17 @@
 {
   "manifest_version": 3,
   "name": "BackgroundCSS",
-  "version": "1.0",
-  "background": {"service_worker": "style.js"},
-  "permissions": ["tabs","scripting"],
-  "host_permissions": ["<all_urls>"]
+  "version": "1.1",
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "css": [
+        "style.css"
+      ],
+      "run_at": "document_start"
+    }
+  ]
 }
